Scripts/Kubernetes-Scripts/todolist-deployments-and-services-from-docker-hub-ssl.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ssl-todoapi
  labels:
    app: ssl-todoapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ssl-todoapi
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: ssl-todoapi
    spec:
      containers:
      - name: ssl-todoapi
        image: DOCKER_HUB_REPOSITORY/todoapi:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ssl-todoapi
  labels:
    app: ssl-todoapi
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: ssl-todoapi
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ssl-todoweb
  labels:
    app: ssl-todoapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ssl-todoweb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: ssl-todoweb
    spec:
      containers:
      - name: ssl-todoweb
        image: DOCKER_HUB_REPOSITORY/todoweb:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ssl-todoweb
  labels:
    app: ssl-todoweb
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: ssl-todoweb
